--- a/public/chat.hbs
+++ b/public/chat.hbs
@@ -13,19 +13,23 @@
     <title>ChatCord App</title>
   </head>
   <body>
+    <input id="username" type="hidden" value="{{username}}">
     <div class="chat-container">
       <header class="chat-header">
         <h1><i class="fas fa-smile"></i> ChatCord</h1>
-        <a id="leave-btn" class="btn">Leave Room</a>
+        <a id="leave-btn" class="btn">LogOut</a>
       </header>
       <main class="chat-main">
         <div class="chat-sidebar">
-          <h3><i class="fas fa-comments"></i> Room Name:</h3>
+          <h3><i class="fas fa-comments"></i> User Name:</h3>
           <h2 id="room-name"></h2>
           <h3><i class="fas fa-users"></i> Users</h3>
           <ul id="users"></ul>
         </div>
-        <div class="chat-messages"></div>
+        <div class="chat-messages" id="chat-messages">
+            <!-- <ul id="messages" class="messages" style="display: none;">
+            </ul> -->
+        </div>
       </main>
       <div class="chat-form-container">
         <form id="chat-form">
@@ -46,7 +50,10 @@
       integrity="sha256-TDxXjkAUay70ae/QJBEpGKkpVslXaHHayklIVglFRT4="
       crossorigin="anonymous"
     ></script>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/socket.io/socket.io.js">
+    </script>
+
   </body>
+      <script src="js/main.js">
+    </script>
 </html>
